--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.17.1",
     "grommet": "^1.8.3",
     "lodash": "^4.17.4",
     "react": "^16.0.0",
