--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.1",
   "main": "start-client.js",
   "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "npm run server",
+    "run-all": "concurrently \"npm run server\" \"npm run client\"",
     "server": "node ./api/app.js",
     "dev-server": "nodemon ./api/app.js",
     "client": "node start-client.js",
     "dev": "concurrently \"npm run dev-server\" \"npm run client\"",
     "lint": "eslint .",
-    "postinstall": "cd frontend && npm install"
+    "postinstall": "cd frontend && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -19,8 +20,14 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "formik": "^1.2.0",
     "mongoose": "^4.11.4",
-    "react-router-dom": "^4.2.2"
+    "ramda": "^0.25.0",
+    "react-if": "^3.1.1",
+    "react-router-dom": "^4.2.2",
+    "recompose": "^0.30.0",
+    "styled-components": "^3.4.6",
+    "yup": "^0.26.3"
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
